backend dockerfile added install gunicorn && setting sqlite_data volume.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,10 @@ FROM python:3.9
 WORKDIR /app
 # Дальнейшие инструкции будут выполняться в директории /app
 
+# Команда установки gunicorn в Dockerfile приложения backend,
+# эта команда должна стоять раньше команды копирования файла requirements.txt
+RUN pip install gunicorn==20.1.0
+
 # Скопировать с локального компьютера файл зависимостей
 # в текущую директорию (текущая директория — это /app).
 COPY requirements.txt .
@@ -21,5 +25,5 @@ RUN pip install -r requirements.txt --no-cache-dir
 # в текущую рабочую директорию образа — /app.
 COPY . .
 
-# При старте контейнера запустить сервер разработки.
-CMD ["python", "manage.py", "runserver", "0:8000"]
+# При старте контейнера запустить сервер gunicorn.
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "backend.wsgi"]
