--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,42 +28,42 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
-    # Копируем код проекта
-    - name: Check out code
-      uses: actions/checkout@v3
-    # Устанавливаем Python с помощью action
-    - name: Set up Python
-      uses: actions/setup-python@v4
-    # В action setup-python@v4 передаём параметр — версию Python
-      with:
-        python-version: 3.9
-    # Обновляем pip, устанавливаем flake8 и flake8-isort,
-    # устанавливаем зависимости проекта
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip 
-        pip install flake8==6.0.0 flake8-isort==6.0.0
-        pip install -r ./backend/requirements.txt
-    # Запускаем flake8
-    - name: Test with flake8 and django tests
-      # Добавляем env-переменные для доступа к БД
-      env:
-        POSTGRES_USER: django_user
-        POSTGRES_PASSWORD: django_password
-        POSTGRES_DB: django_db
-        # Сервер БД запущен в Docker, но его порт проброшен на хост
-        # Поэтому подключаемся к 127.0.0.1:5432
-        DB_HOST: 127.0.0.1
-        DB_PORT: 5432
-      # Вызываем flake8 и указываем ему,
-      # что нужно проверить файлы только в папке backend/
-      # запускаем тесты django
-      run: |
-        python -m flake8 backend/
-        cd backend/
-        python manage.py test
+      # Копируем код проекта
+      - name: Check out code
+        uses: actions/checkout@v3
+      # Устанавливаем Python с помощью action
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        # В action setup-python@v4 передаём параметр — версию Python
+        with:
+          python-version: 3.9
+      # Обновляем pip, устанавливаем flake8 и flake8-isort,
+      # устанавливаем зависимости проекта
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip 
+          pip install flake8==6.0.0 flake8-isort==6.0.0
+          pip install -r ./backend/requirements.txt
+      # Запускаем flake8
+      - name: Test with flake8 and django tests
+        # Добавляем env-переменные для доступа к БД
+        env:
+          POSTGRES_USER: django_user
+          POSTGRES_PASSWORD: django_password
+          POSTGRES_DB: django_db
+          # Сервер БД запущен в Docker, но его порт проброшен на хост
+          # Поэтому подключаемся к 127.0.0.1:5432
+          DB_HOST: 127.0.0.1
+          DB_PORT: 5432
+        # Вызываем flake8 и указываем ему,
+        # что нужно проверить файлы только в папке backend/
+        # запускаем тесты django
+        run: |
+          python -m flake8 backend/
+          cd backend/
+          python manage.py test
 
-  # Добавляем новую задачу: деплой приложения
+  # Деплой приложения
   build_and_push_to_docker_hub:
     name: Push Docker image to DockerHub
     runs-on: ubuntu-latest
@@ -99,3 +99,68 @@ jobs:
           # устанавливаем тег latest, чтобы потом
           # на сервере и в docker-compose.yml не указывать версию
           tags: vladmeh/taski_backend:latest
+
+  frontend_tests:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up nodeJS
+        # Это готовый воркфлоу для установки Node.js на раннер
+        uses: actions/setup-node@v3
+        with:
+          # Это параметр воркфлоу, указывающий нужную версию Node.js
+          node-version: 18
+
+      - name: Install dependencies
+        # Эта команда устанавливает зависимости для фронтенда
+        run: |
+          cd frontend/
+          npm ci
+
+      - name: Test frontend
+        # Запускаем тесты
+        run: |
+          cd frontend/
+          npm run test
+
+  build_frontend_and_push_to_docker_hub:
+    name: Push frontend Docker image to DockerHub
+    runs-on: ubuntu-latest
+    needs: frontend_tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./frontend/
+          push: true
+          tags: vladmeh/taski_frontend:latest
+
+  build_gateway_and_push_to_docker_hub:
+    name: Push gateway Docker image to DockerHub
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to DockerHub
+        uses: docker/build-push-action@v4
+        with:
+          context: ./gateway/
+          push: true
+          tags: vladmeh/taski_gateway:latest
